[gd_scene load_steps=9 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://c1.vox" type="ArrayMesh" id=2]
[ext_resource path="res://addons/MagicaVoxelImporter/VoxelMesh.gd" type="Script" id=3]
[ext_resource path="res://FileDialog.gd" type="Script" id=4]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 5, 5 )

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 0.132812, 0.132812, 0.132812, 1 )

[sub_resource type="Animation" id=4]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 28.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position3D/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12.9, 28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -5.21541e-008, 0.576291, -1.34988 ), Vector3( -1.75089e-007, 0.959857, -2.59255 ), Vector3( -5.21541e-008, 0.576291, -1.34988 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Model" type="MeshInstance" parent="."]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.121681, 0.0185863, -0.486573 )
mesh = ExtResource( 2 )
material/0 = null
script = ExtResource( 3 )
point_size = 3.0

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0916136, 1.47898, -1.34932 )
shadow_enabled = true
shadow_bias = 0.2
shadow_contact = 0.01
omni_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0238543, 0, 0 )

[node name="Camera" type="Camera" parent="Position3D"]
transform = Transform( -1, 1.7322e-009, -9.30345e-008, -2.57837e-008, 0.955518, 0.294932, 8.9407e-008, 0.294932, -0.955518, -5.21541e-008, 0.576291, -1.34988 )

[node name="OmniLight2" type="OmniLight" parent="Position3D/Camera"]
transform = Transform( -1, -2.57837e-008, 8.35341e-008, 0, 0.955518, 0.294931, -8.74228e-008, 0.294931, -0.955518, -0.288927, -0.588953, 1.65443 )
omni_range = 2.54623

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "demo"
anims/demo = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Demo"
anims/Demo = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_right = 602.0
margin_bottom = 270.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "F:/ReasonUsers/Jamie/Documents/projects/govox"
current_path = "F:/ReasonUsers/Jamie/Documents/projects/govox/"
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -43.0
text = "Open"

[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="FileDialog" method="_on_FileDialog_files_selected"]
[connection signal="pressed" from="Button" to="FileDialog" method="_on_Button_pressed"]
